# iwfm

./: .gitignore  README.md  build_wheel.bat  build_wheel.sh  pyproject.toml  requirements.txt  requirements_no_versions.txt  run_tests.sh  setup.py
.github/workflows/: docs.yml
docs/: api.rst  conf.py  file-formats.rst  index.rst  install.rst
docs/_autosummary/: iwfm.Unbuffered.rst  iwfm.bnds2mask.rst  iwfm.bud2csv.rst  iwfm.budget_info.rst  iwfm.calib.bias_calc.rst  iwfm.calib.calib.rst  iwfm.calib.calib_stats.rst  iwfm.calib.compare.rst  iwfm.calib.divshort2obs.rst  iwfm.calib.do_avgonly.rst  iwfm.calib.fac2iwfm.rst  iwfm.calib.find_nearest_index.rst  iwfm.calib.get_hyd_fname.rst  iwfm.calib.get_hyd_info.rst  iwfm.calib.get_hyd_names.rst  iwfm.calib.get_obs_hyd.rst  iwfm.calib.get_sim_hyd.rst  iwfm.calib.headdiff_hyds.rst  iwfm.calib.headdiff_read.rst  iwfm.calib.hyds_missed.rst  iwfm.calib.idw.rst  iwfm.calib.interp_val.rst  iwfm.calib.iwfm2obs.rst  iwfm.calib.iwfm_exe_time.rst  iwfm.calib.krige.rst  iwfm.calib.ltbud.rst  iwfm.calib.ltsmp.rst  iwfm.calib.obs_smp.rst  iwfm.calib.par2iwfm.rst  iwfm.calib.params2gw.rst  iwfm.calib.pest_res_stats.rst  iwfm.calib.ppk2fac.rst  iwfm.calib.ppk2fac_trans.rst  iwfm.calib.read_gw_file.rst  iwfm.calib.read_obs_wells.rst  iwfm.calib.read_overwrite_file.rst  iwfm.calib.read_settings.rst  iwfm.calib.real2iwfm.rst  iwfm.calib.res_stats.rst  iwfm.calib.rmse_calc.rst  (+474 more)
examples/: 01_read_preprocessor.py  02_hyd_diff.py  03_model_shapefiles.py  04_head_maps.py  05_hdf_to_csv.py  06_xls_workbook.py  07_logging.py  README.md
iwfm/: Unbuffered.py  __init__.py  bnds2mask.py  bud2csv.py  budget_info.py  cdec2monthly.py  cfs2afd.py  closest_list.py  date_index.py  date_util.py  dbf_open.py  dbf_print_record.py  detaw_2_table.py  dicu2table.py  dss_date.py  elem_poly_coords.py  elem_poly_coords_wkt.py  file2dict.py  file_2_bak.py  file_delete.py  file_missing.py  file_rename.py  file_test.py  file_type_error.py  file_utils.py  file_validate_path.py  find_line_num.py  generate_datetime_objects.py  generate_timesteps.py  get_change_col.py  get_elem_centroids.py  get_elem_list.py  get_gw_params.py  get_heads_4_date.py  get_stream_list_40.py  get_stream_list_41.py  get_stream_list_42.py  get_stream_list_50.py  gw_well_lay_elev.py  headall2csv.py  (+114 more)
iwfm/calib/: __init__.py  bias_calc.py  calib.py  calib_stats.py  compare.py  divshort2obs.py  do_avgonly.py  fac2iwfm.py  find_nearest_index.py  get_hyd_fname.py  get_hyd_info.py  get_hyd_names.py  get_obs_hyd.py  get_sim_hyd.py  headdiff_hyds.py  headdiff_read.py  hyds_missed.py  idw.py  interp_val.py  iwfm2obs.py  iwfm_exe_time.py  krige.py  ltbud.py  ltsmp.py  obs_smp.py  par2iwfm.py  params2gw.py  pest_res_stats.py  ppk2fac.py  ppk2fac_trans.py  read_gw_file.py  read_obs_wells.py  read_overwrite_file.py  read_settings.py  real2iwfm.py  res_stats.py  rmse_calc.py  setrot.py  sim_4_sites.py  sim_equiv.py  (+13 more)
iwfm/cli/: __main__.py  context.py  main.py
iwfm/debug/: __init__.py  check_key.py  debug.py  exe_time.py  logger_setup.py  print_dict.py  print_env.py  print_exe_time.py  test_dict.py  this_python.py  this_sys.py  this_sys_version.py  timer.py
iwfm/diagnostics/: __init__.py  assemble_bundle.py  build_tied_groups.py  detect_convergence_trouble.py  detect_mass_balance_hotspots.py  detect_params_at_bounds.py  detect_residual_clusters.py  detect_stream_gw_anomalies.py  diag_dataclasses.py  iteration_callback.py  llm_supervisor.py  parse_model_geometry.py  read_convergence_hdf.py  read_elemmb_hdf.py  read_pest_sensitivity.py  read_pest_state.py  read_residual_hdf.py  read_stream_hdf.py  select_parameters.py  serialize_bundle.py  setup_pest_run.py  stability_jacobian.py  suggest_parameter_changes.py  write_pest_control.py
iwfm/dll/: __init__.py  date_time.py  dll_backend.py  dll_init.py  dll_init_tyler.py  dll_open.py  get_elem_ids.py  get_elem_nodes.py  get_nelem.py  get_nnodes.py  get_node_ids.py  get_node_xy.py  get_timespecs.py  get_timesteps.py  seek_proc.py
iwfm/gis/: __init__.py  bearing.py  choropleth.py  contour2png.py  dd2dms.py  density_plot.py  distance_ellipse.py  distance_sphere.py  dms2dd.py  (+129 more)
tests/: test_bud2csv.py  test_budget_functions.py  test_budget_info.py  test_buds2xl.py  test_calib_divshort2obs.py  test_calib_fac2iwfm.py  test_calib_get_hyd_info.py  test_calib_idw.py  test_calib_read_obs_wells.py  test_calib_real2iwfm.py  test_calib_stacdep2obs.py  test_cli_main.py  test_cli_smoke.py  test_dataclasses.py  test_dbf_open.py  test_dbf_print_record.py  test_detaw_2_table.py  test_diagnostics_build_tied_groups.py  test_diagnostics_detectors.py  test_diagnostics_read_pest_state.py  test_diagnostics_select_parameters.py  test_diagnostics_serialize_bundle.py  test_diagnostics_stability_jacobian.py  test_diagnostics_write_pest_control.py  test_dicu2table.py  test_elem2boundingpoly.py  test_elem2shp.py  test_elem_poly_coords_wkt.py  test_elems2shp_csv.py  test_file_ops.py  test_get_change_col.py  test_get_gw_params.py  test_get_usbr.py  test_gis_choropleth.py  test_gis_geop_plot.py  test_gis_geop_saveplot.py  test_gis_grid_colorize.py  test_gis_prj_wkt1.py  test_gis_shp_crs.py  test_gis_utm_2_wgs84.py  (+80 more)
(+1586 files in other folders)
